deprecation fixups